# yew-virtual

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  pages.yml
crates/yew-virtual/: Cargo.toml
crates/yew-virtual/src/: lib.rs  prelude.rs
crates/yew-virtual/src/core/: item_size_mode.rs  measure_element_fn.rs  measure_item_outcome.rs  measurement_cache.rs  mod.rs  prelude.rs  range_calculator.rs  rect.rs  scroll_alignment.rs  scroll_behavior.rs  scroll_direction.rs  scroll_reconcile_action.rs  scroll_state.rs  scroll_to_options.rs  should_adjust_scroll_on_resize_fn.rs  virtual_item.rs  virtual_key.rs  virtualizer.rs  virtualizer_error.rs  virtualizer_options.rs  visible_range.rs
crates/yew-virtual/src/hooks/: item_measurement_registry.rs  mod.rs  prelude.rs  scroll_application.rs  scroll_binding.rs  use_virtualizer.rs  use_window_virtualizer.rs  virtualizer_handle.rs
crates/yew-virtual/tests/: core_types_tests.rs  measurement_cache_tests.rs  mod.rs  new_features_tests.rs  range_calculator_tests.rs  virtualizer_options_tests.rs  virtualizer_tests.rs
crates/yew-virtual/tests/coverage_gaps_tests/: api_surface_tests.rs  mod.rs
docs/: index.html
examples/tailwind-virtual-list/: Cargo.toml  index.html
examples/tailwind-virtual-list/src/: app.rs  main.rs
examples/tailwind-virtual-list/src/components/: horizontal_list_demo.rs  mod.rs  use_cases_panel.rs  virtual_list_demo.rs
examples/tailwind-virtual-list/src/renderers/: horizontal_item_renderer.rs  mod.rs  vertical_item_renderer.rs
examples/tailwind-virtual-list/src/utils/: format_number.rs  mod.rs  virtualizer_helper.rs
